--- a/public/index.html
+++ b/public/index.html
@@ -8,5 +8,13 @@
   </head>
   <body>
     <h1>oclock memory game</h1>
+
+    <script>
+      fetch('/api/game')
+        .then((res) => res.json())
+        .then((res) => {
+          console.log(res)
+        })
+    </script>
   </body>
 </html>
