display the initial board

--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,157 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>oclock memory game</title>
+    <link rel="stylesheet" href="css/main.css" />
   </head>
   <body>
     <h1>oclock memory game</h1>
+
+    <div class="board">
+      <div data-id="0" class="item">
+        <img class="back" src="https://picsum.photos/100/100" alt="" />
+        <img class="front__0" src="./assets/fruitsSprite.png" alt="" />
+      </div>
+      <div data-id="1" class="item">
+        <img class="back" src="https://picsum.photos/100/100" alt="" />
+        <img class="front__1" src="./assets/fruitsSprite.png" alt="" />
+      </div>
+      <div data-id="2" class="item">
+        <img class="back" src="https://picsum.photos/100/100" alt="" />
+        <img class="front__2" src="./assets/fruitsSprite.png" alt="" />
+      </div>
+      <div data-id="3" class="item">
+        <img class="back" src="https://picsum.photos/100/100" alt="" />
+        <img class="front__3" src="./assets/fruitsSprite.png" alt="" />
+      </div>
+      <div data-id="4" class="item">
+        <img class="back" src="https://picsum.photos/100/100" alt="" />
+        <img class="front__4" src="./assets/fruitsSprite.png" alt="" />
+      </div>
+      <div data-id="5" class="item">
+        <img class="back" src="https://picsum.photos/100/100" alt="" />
+        <img class="front__5" src="./assets/fruitsSprite.png" alt="" />
+      </div>
+      <div data-id="6" class="item">
+        <img class="back" src="https://picsum.photos/100/100" alt="" />
+        <img class="front__6" src="./assets/fruitsSprite.png" alt="" />
+      </div>
+      <div data-id="7" class="item">
+        <img class="back" src="https://picsum.photos/100/100" alt="" />
+        <img class="front__7" src="./assets/fruitsSprite.png" alt="" />
+      </div>
+      <div data-id="8" class="item">
+        <img class="back" src="https://picsum.photos/100/100" alt="" />
+        <img class="front__8" src="./assets/fruitsSprite.png" alt="" />
+      </div>
+      <div data-id="9" class="item">
+        <img class="back" src="https://picsum.photos/100/100" alt="" />
+        <img class="front__9" src="./assets/fruitsSprite.png" alt="" />
+      </div>
+      <div data-id="10" class="item">
+        <img class="back" src="https://picsum.photos/100/100" alt="" />
+        <img class="front__10" src="./assets/fruitsSprite.png" alt="" />
+      </div>
+      <div data-id="11" class="item">
+        <img class="back" src="https://picsum.photos/100/100" alt="" />
+        <img class="front__11" src="./assets/fruitsSprite.png" alt="" />
+      </div>
+      <div data-id="12" class="item">
+        <img class="back" src="https://picsum.photos/100/100" alt="" />
+        <img class="front__12" src="./assets/fruitsSprite.png" alt="" />
+      </div>
+      <div data-id="13" class="item">
+        <img class="back" src="https://picsum.photos/100/100" alt="" />
+        <img class="front__13" src="./assets/fruitsSprite.png" alt="" />
+      </div>
+      <div data-id="14" class="item">
+        <img class="back" src="https://picsum.photos/100/100" alt="" />
+        <img class="front__14" src="./assets/fruitsSprite.png" alt="" />
+      </div>
+      <div data-id="15" class="item">
+        <img class="back" src="https://picsum.photos/100/100" alt="" />
+        <img class="front__15" src="./assets/fruitsSprite.png" alt="" />
+      </div>
+      <div data-id="16" class="item">
+        <img class="back" src="https://picsum.photos/100/100" alt="" />
+        <img class="front__16" src="./assets/fruitsSprite.png" alt="" />
+      </div>
+      <div data-id="17" class="item">
+        <img class="back" src="https://picsum.photos/100/100" alt="" />
+        <img class="front__17" src="./assets/fruitsSprite.png" alt="" />
+      </div>
+      <div data-id="18" class="item">
+        <img class="back" src="https://picsum.photos/100/100" alt="" />
+        <img class="front__0" src="./assets/fruitsSprite.png" alt="" />
+      </div>
+      <div data-id="19" class="item">
+        <img class="back" src="https://picsum.photos/100/100" alt="" />
+        <img class="front__1" src="./assets/fruitsSprite.png" alt="" />
+      </div>
+      <div data-id="20" class="item">
+        <img class="back" src="https://picsum.photos/100/100" alt="" />
+        <img class="front__2" src="./assets/fruitsSprite.png" alt="" />
+      </div>
+      <div data-id="21" class="item">
+        <img class="back" src="https://picsum.photos/100/100" alt="" />
+        <img class="front__3" src="./assets/fruitsSprite.png" alt="" />
+      </div>
+      <div data-id="22" class="item">
+        <img class="back" src="https://picsum.photos/100/100" alt="" />
+        <img class="front__4" src="./assets/fruitsSprite.png" alt="" />
+      </div>
+      <div data-id="23" class="item">
+        <img class="back" src="https://picsum.photos/100/100" alt="" />
+        <img class="front__5" src="./assets/fruitsSprite.png" alt="" />
+      </div>
+      <div data-id="24" class="item">
+        <img class="back" src="https://picsum.photos/100/100" alt="" />
+        <img class="front__6" src="./assets/fruitsSprite.png" alt="" />
+      </div>
+      <div data-id="25" class="item">
+        <img class="back" src="https://picsum.photos/100/100" alt="" />
+        <img class="front__7" src="./assets/fruitsSprite.png" alt="" />
+      </div>
+      <div data-id="26" class="item">
+        <img class="back" src="https://picsum.photos/100/100" alt="" />
+        <img class="front__8" src="./assets/fruitsSprite.png" alt="" />
+      </div>
+      <div data-id="27" class="item">
+        <img class="back" src="https://picsum.photos/100/100" alt="" />
+        <img class="front__9" src="./assets/fruitsSprite.png" alt="" />
+      </div>
+      <div data-id="28" class="item">
+        <img class="back" src="https://picsum.photos/100/100" alt="" />
+        <img class="front__10" src="./assets/fruitsSprite.png" alt="" />
+      </div>
+      <div data-id="29" class="item">
+        <img class="back" src="https://picsum.photos/100/100" alt="" />
+        <img class="front__11" src="./assets/fruitsSprite.png" alt="" />
+      </div>
+      <div data-id="30" class="item">
+        <img class="back" src="https://picsum.photos/100/100" alt="" />
+        <img class="front__12" src="./assets/fruitsSprite.png" alt="" />
+      </div>
+      <div data-id="31" class="item">
+        <img class="back" src="https://picsum.photos/100/100" alt="" />
+        <img class="front__13" src="./assets/fruitsSprite.png" alt="" />
+      </div>
+      <div data-id="32" class="item">
+        <img class="back" src="https://picsum.photos/100/100" alt="" />
+        <img class="front__14" src="./assets/fruitsSprite.png" alt="" />
+      </div>
+      <div data-id="33" class="item">
+        <img class="back" src="https://picsum.photos/100/100" alt="" />
+        <img class="front__15" src="./assets/fruitsSprite.png" alt="" />
+      </div>
+      <div data-id="34" class="item">
+        <img class="back" src="https://picsum.photos/100/100" alt="" />
+        <img class="front__16" src="./assets/fruitsSprite.png" alt="" />
+      </div>
+      <div data-id="35" class="item">
+        <img class="back" src="https://picsum.photos/100/100" alt="" />
+        <img class="front__17" src="./assets/fruitsSprite.png" alt="" />
+      </div>
+    </div>
 
     <script>
       fetch('/api/game')
@@ -16,5 +164,6 @@
           console.log(res)
         })
     </script>
+    <script src="./src/main.js"></script>
   </body>
 </html>
