add some css for animation and fix some css

--- a/public/index.html
+++ b/public/index.html
@@ -12,148 +12,220 @@
 
     <div class="board">
       <div data-id="0" class="item">
-        <img class="back" src="https://picsum.photos/100/100" alt="" />
-        <img class="front__0" src="./assets/fruitsSprite.png" alt="" />
+        <div class="card">
+          <img class="back" src="https://picsum.photos/100/100" alt="" />
+          <img class="front card_0" src="./assets/fruitsSprite.png" alt="" />
+        </div>
       </div>
       <div data-id="1" class="item">
-        <img class="back" src="https://picsum.photos/100/100" alt="" />
-        <img class="front__1" src="./assets/fruitsSprite.png" alt="" />
+        <div class="card">
+          <img class="back" src="https://picsum.photos/100/100" alt="" />
+          <img class="front card_1" src="./assets/fruitsSprite.png" alt="" />
+        </div>
       </div>
       <div data-id="2" class="item">
-        <img class="back" src="https://picsum.photos/100/100" alt="" />
-        <img class="front__2" src="./assets/fruitsSprite.png" alt="" />
+        <div class="card">
+          <img class="back" src="https://picsum.photos/100/100" alt="" />
+          <img class="front card_2" src="./assets/fruitsSprite.png" alt="" />
+        </div>
       </div>
       <div data-id="3" class="item">
-        <img class="back" src="https://picsum.photos/100/100" alt="" />
-        <img class="front__3" src="./assets/fruitsSprite.png" alt="" />
+        <div class="card">
+          <img class="back" src="https://picsum.photos/100/100" alt="" />
+          <img class="front card_3" src="./assets/fruitsSprite.png" alt="" />
+        </div>
       </div>
       <div data-id="4" class="item">
-        <img class="back" src="https://picsum.photos/100/100" alt="" />
-        <img class="front__4" src="./assets/fruitsSprite.png" alt="" />
+        <div class="card">
+          <img class="back" src="https://picsum.photos/100/100" alt="" />
+          <img class="front card_4" src="./assets/fruitsSprite.png" alt="" />
+        </div>
       </div>
       <div data-id="5" class="item">
-        <img class="back" src="https://picsum.photos/100/100" alt="" />
-        <img class="front__5" src="./assets/fruitsSprite.png" alt="" />
+        <div class="card">
+          <img class="back" src="https://picsum.photos/100/100" alt="" />
+          <img class="front card_5" src="./assets/fruitsSprite.png" alt="" />
+        </div>
       </div>
       <div data-id="6" class="item">
-        <img class="back" src="https://picsum.photos/100/100" alt="" />
-        <img class="front__6" src="./assets/fruitsSprite.png" alt="" />
+        <div class="card">
+          <img class="back" src="https://picsum.photos/100/100" alt="" />
+          <img class="front card_6" src="./assets/fruitsSprite.png" alt="" />
+        </div>
       </div>
       <div data-id="7" class="item">
-        <img class="back" src="https://picsum.photos/100/100" alt="" />
-        <img class="front__7" src="./assets/fruitsSprite.png" alt="" />
+        <div class="card">
+          <img class="back" src="https://picsum.photos/100/100" alt="" />
+          <img class="front card_7" src="./assets/fruitsSprite.png" alt="" />
+        </div>
       </div>
       <div data-id="8" class="item">
-        <img class="back" src="https://picsum.photos/100/100" alt="" />
-        <img class="front__8" src="./assets/fruitsSprite.png" alt="" />
+        <div class="card">
+          <img class="back" src="https://picsum.photos/100/100" alt="" />
+          <img class="front card_8" src="./assets/fruitsSprite.png" alt="" />
+        </div>
       </div>
       <div data-id="9" class="item">
-        <img class="back" src="https://picsum.photos/100/100" alt="" />
-        <img class="front__9" src="./assets/fruitsSprite.png" alt="" />
+        <div class="card">
+          <img class="back" src="https://picsum.photos/100/100" alt="" />
+          <img class="front card_9" src="./assets/fruitsSprite.png" alt="" />
+        </div>
       </div>
       <div data-id="10" class="item">
-        <img class="back" src="https://picsum.photos/100/100" alt="" />
-        <img class="front__10" src="./assets/fruitsSprite.png" alt="" />
+        <div class="card">
+          <img class="back" src="https://picsum.photos/100/100" alt="" />
+          <img class="front card_10" src="./assets/fruitsSprite.png" alt="" />
+        </div>
       </div>
       <div data-id="11" class="item">
-        <img class="back" src="https://picsum.photos/100/100" alt="" />
-        <img class="front__11" src="./assets/fruitsSprite.png" alt="" />
+        <div class="card">
+          <img class="back" src="https://picsum.photos/100/100" alt="" />
+          <img class="front card_11" src="./assets/fruitsSprite.png" alt="" />
+        </div>
       </div>
       <div data-id="12" class="item">
-        <img class="back" src="https://picsum.photos/100/100" alt="" />
-        <img class="front__12" src="./assets/fruitsSprite.png" alt="" />
+        <div class="card">
+          <img class="back" src="https://picsum.photos/100/100" alt="" />
+          <img class="front card_12" src="./assets/fruitsSprite.png" alt="" />
+        </div>
       </div>
       <div data-id="13" class="item">
-        <img class="back" src="https://picsum.photos/100/100" alt="" />
-        <img class="front__13" src="./assets/fruitsSprite.png" alt="" />
+        <div class="card">
+          <img class="back" src="https://picsum.photos/100/100" alt="" />
+          <img class="front card_13" src="./assets/fruitsSprite.png" alt="" />
+        </div>
       </div>
       <div data-id="14" class="item">
-        <img class="back" src="https://picsum.photos/100/100" alt="" />
-        <img class="front__14" src="./assets/fruitsSprite.png" alt="" />
+        <div class="card">
+          <img class="back" src="https://picsum.photos/100/100" alt="" />
+          <img class="front card_14" src="./assets/fruitsSprite.png" alt="" />
+        </div>
       </div>
       <div data-id="15" class="item">
-        <img class="back" src="https://picsum.photos/100/100" alt="" />
-        <img class="front__15" src="./assets/fruitsSprite.png" alt="" />
+        <div class="card">
+          <img class="back" src="https://picsum.photos/100/100" alt="" />
+          <img class="front card_15" src="./assets/fruitsSprite.png" alt="" />
+        </div>
       </div>
       <div data-id="16" class="item">
-        <img class="back" src="https://picsum.photos/100/100" alt="" />
-        <img class="front__16" src="./assets/fruitsSprite.png" alt="" />
+        <div class="card">
+          <img class="back" src="https://picsum.photos/100/100" alt="" />
+          <img class="front card_16" src="./assets/fruitsSprite.png" alt="" />
+        </div>
       </div>
       <div data-id="17" class="item">
-        <img class="back" src="https://picsum.photos/100/100" alt="" />
-        <img class="front__17" src="./assets/fruitsSprite.png" alt="" />
+        <div class="card">
+          <img class="back" src="https://picsum.photos/100/100" alt="" />
+          <img class="front card_17" src="./assets/fruitsSprite.png" alt="" />
+        </div>
       </div>
       <div data-id="18" class="item">
-        <img class="back" src="https://picsum.photos/100/100" alt="" />
-        <img class="front__0" src="./assets/fruitsSprite.png" alt="" />
+        <div class="card">
+          <img class="back" src="https://picsum.photos/100/100" alt="" />
+          <img class="front card_0" src="./assets/fruitsSprite.png" alt="" />
+        </div>
       </div>
       <div data-id="19" class="item">
-        <img class="back" src="https://picsum.photos/100/100" alt="" />
-        <img class="front__1" src="./assets/fruitsSprite.png" alt="" />
+        <div class="card">
+          <img class="back" src="https://picsum.photos/100/100" alt="" />
+          <img class="front card_1" src="./assets/fruitsSprite.png" alt="" />
+        </div>
       </div>
       <div data-id="20" class="item">
-        <img class="back" src="https://picsum.photos/100/100" alt="" />
-        <img class="front__2" src="./assets/fruitsSprite.png" alt="" />
+        <div class="card">
+          <img class="back" src="https://picsum.photos/100/100" alt="" />
+          <img class="front card_2" src="./assets/fruitsSprite.png" alt="" />
+        </div>
       </div>
       <div data-id="21" class="item">
-        <img class="back" src="https://picsum.photos/100/100" alt="" />
-        <img class="front__3" src="./assets/fruitsSprite.png" alt="" />
+        <div class="card">
+          <img class="back" src="https://picsum.photos/100/100" alt="" />
+          <img class="front card_3" src="./assets/fruitsSprite.png" alt="" />
+        </div>
       </div>
       <div data-id="22" class="item">
-        <img class="back" src="https://picsum.photos/100/100" alt="" />
-        <img class="front__4" src="./assets/fruitsSprite.png" alt="" />
+        <div class="card">
+          <img class="back" src="https://picsum.photos/100/100" alt="" />
+          <img class="front card_4" src="./assets/fruitsSprite.png" alt="" />
+        </div>
       </div>
       <div data-id="23" class="item">
-        <img class="back" src="https://picsum.photos/100/100" alt="" />
-        <img class="front__5" src="./assets/fruitsSprite.png" alt="" />
+        <div class="card">
+          <img class="back" src="https://picsum.photos/100/100" alt="" />
+          <img class="front card_5" src="./assets/fruitsSprite.png" alt="" />
+        </div>
       </div>
       <div data-id="24" class="item">
-        <img class="back" src="https://picsum.photos/100/100" alt="" />
-        <img class="front__6" src="./assets/fruitsSprite.png" alt="" />
+        <div class="card">
+          <img class="back" src="https://picsum.photos/100/100" alt="" />
+          <img class="front card_6" src="./assets/fruitsSprite.png" alt="" />
+        </div>
       </div>
       <div data-id="25" class="item">
-        <img class="back" src="https://picsum.photos/100/100" alt="" />
-        <img class="front__7" src="./assets/fruitsSprite.png" alt="" />
+        <div class="card">
+          <img class="back" src="https://picsum.photos/100/100" alt="" />
+          <img class="front card_7" src="./assets/fruitsSprite.png" alt="" />
+        </div>
       </div>
       <div data-id="26" class="item">
-        <img class="back" src="https://picsum.photos/100/100" alt="" />
-        <img class="front__8" src="./assets/fruitsSprite.png" alt="" />
+        <div class="card">
+          <img class="back" src="https://picsum.photos/100/100" alt="" />
+          <img class="front card_8" src="./assets/fruitsSprite.png" alt="" />
+        </div>
       </div>
       <div data-id="27" class="item">
-        <img class="back" src="https://picsum.photos/100/100" alt="" />
-        <img class="front__9" src="./assets/fruitsSprite.png" alt="" />
+        <div class="card">
+          <img class="back" src="https://picsum.photos/100/100" alt="" />
+          <img class="front card_9" src="./assets/fruitsSprite.png" alt="" />
+        </div>
       </div>
       <div data-id="28" class="item">
-        <img class="back" src="https://picsum.photos/100/100" alt="" />
-        <img class="front__10" src="./assets/fruitsSprite.png" alt="" />
+        <div class="card">
+          <img class="back" src="https://picsum.photos/100/100" alt="" />
+          <img class="front card_10" src="./assets/fruitsSprite.png" alt="" />
+        </div>
       </div>
       <div data-id="29" class="item">
-        <img class="back" src="https://picsum.photos/100/100" alt="" />
-        <img class="front__11" src="./assets/fruitsSprite.png" alt="" />
+        <div class="card">
+          <img class="back" src="https://picsum.photos/100/100" alt="" />
+          <img class="front card_11" src="./assets/fruitsSprite.png" alt="" />
+        </div>
       </div>
       <div data-id="30" class="item">
-        <img class="back" src="https://picsum.photos/100/100" alt="" />
-        <img class="front__12" src="./assets/fruitsSprite.png" alt="" />
+        <div class="card">
+          <img class="back" src="https://picsum.photos/100/100" alt="" />
+          <img class="front card_12" src="./assets/fruitsSprite.png" alt="" />
+        </div>
       </div>
       <div data-id="31" class="item">
-        <img class="back" src="https://picsum.photos/100/100" alt="" />
-        <img class="front__13" src="./assets/fruitsSprite.png" alt="" />
+        <div class="card">
+          <img class="back" src="https://picsum.photos/100/100" alt="" />
+          <img class="front card_13" src="./assets/fruitsSprite.png" alt="" />
+        </div>
       </div>
       <div data-id="32" class="item">
-        <img class="back" src="https://picsum.photos/100/100" alt="" />
-        <img class="front__14" src="./assets/fruitsSprite.png" alt="" />
+        <div class="card">
+          <img class="back" src="https://picsum.photos/100/100" alt="" />
+          <img class="front card_14" src="./assets/fruitsSprite.png" alt="" />
+        </div>
       </div>
       <div data-id="33" class="item">
-        <img class="back" src="https://picsum.photos/100/100" alt="" />
-        <img class="front__15" src="./assets/fruitsSprite.png" alt="" />
+        <div class="card">
+          <img class="back" src="https://picsum.photos/100/100" alt="" />
+          <img class="front card_15" src="./assets/fruitsSprite.png" alt="" />
+        </div>
       </div>
       <div data-id="34" class="item">
-        <img class="back" src="https://picsum.photos/100/100" alt="" />
-        <img class="front__16" src="./assets/fruitsSprite.png" alt="" />
+        <div class="card">
+          <img class="back" src="https://picsum.photos/100/100" alt="" />
+          <img class="front card_16" src="./assets/fruitsSprite.png" alt="" />
+        </div>
       </div>
       <div data-id="35" class="item">
-        <img class="back" src="https://picsum.photos/100/100" alt="" />
-        <img class="front__17" src="./assets/fruitsSprite.png" alt="" />
+        <div class="card">
+          <img class="back" src="https://picsum.photos/100/100" alt="" />
+          <img class="front card_17" src="./assets/fruitsSprite.png" alt="" />
+        </div>
       </div>
     </div>
 
