--- a/public/index.html
+++ b/public/index.html
@@ -14,228 +14,221 @@
       <div data-id="0" class="item">
         <div class="card">
           <img class="back" src="https://picsum.photos/100/100" alt="" />
-          <img class="front card_0" src="./assets/fruitsSprite.png" alt="" />
+          <img class="front" src="./assets/fruitsSprite.png" alt="" />
         </div>
       </div>
       <div data-id="1" class="item">
         <div class="card">
           <img class="back" src="https://picsum.photos/100/100" alt="" />
-          <img class="front card_1" src="./assets/fruitsSprite.png" alt="" />
+          <img class="front" src="./assets/fruitsSprite.png" alt="" />
         </div>
       </div>
       <div data-id="2" class="item">
         <div class="card">
           <img class="back" src="https://picsum.photos/100/100" alt="" />
-          <img class="front card_2" src="./assets/fruitsSprite.png" alt="" />
+          <img class="front" src="./assets/fruitsSprite.png" alt="" />
         </div>
       </div>
       <div data-id="3" class="item">
         <div class="card">
           <img class="back" src="https://picsum.photos/100/100" alt="" />
-          <img class="front card_3" src="./assets/fruitsSprite.png" alt="" />
+          <img class="front" src="./assets/fruitsSprite.png" alt="" />
         </div>
       </div>
       <div data-id="4" class="item">
         <div class="card">
           <img class="back" src="https://picsum.photos/100/100" alt="" />
-          <img class="front card_4" src="./assets/fruitsSprite.png" alt="" />
+          <img class="front" src="./assets/fruitsSprite.png" alt="" />
         </div>
       </div>
       <div data-id="5" class="item">
         <div class="card">
           <img class="back" src="https://picsum.photos/100/100" alt="" />
-          <img class="front card_5" src="./assets/fruitsSprite.png" alt="" />
+          <img class="front" src="./assets/fruitsSprite.png" alt="" />
         </div>
       </div>
       <div data-id="6" class="item">
         <div class="card">
           <img class="back" src="https://picsum.photos/100/100" alt="" />
-          <img class="front card_6" src="./assets/fruitsSprite.png" alt="" />
+          <img class="front" src="./assets/fruitsSprite.png" alt="" />
         </div>
       </div>
       <div data-id="7" class="item">
         <div class="card">
           <img class="back" src="https://picsum.photos/100/100" alt="" />
-          <img class="front card_7" src="./assets/fruitsSprite.png" alt="" />
+          <img class="front" src="./assets/fruitsSprite.png" alt="" />
         </div>
       </div>
       <div data-id="8" class="item">
         <div class="card">
           <img class="back" src="https://picsum.photos/100/100" alt="" />
-          <img class="front card_8" src="./assets/fruitsSprite.png" alt="" />
+          <img class="front" src="./assets/fruitsSprite.png" alt="" />
         </div>
       </div>
       <div data-id="9" class="item">
         <div class="card">
           <img class="back" src="https://picsum.photos/100/100" alt="" />
-          <img class="front card_9" src="./assets/fruitsSprite.png" alt="" />
+          <img class="front" src="./assets/fruitsSprite.png" alt="" />
         </div>
       </div>
       <div data-id="10" class="item">
         <div class="card">
           <img class="back" src="https://picsum.photos/100/100" alt="" />
-          <img class="front card_10" src="./assets/fruitsSprite.png" alt="" />
+          <img class="front" src="./assets/fruitsSprite.png" alt="" />
         </div>
       </div>
       <div data-id="11" class="item">
         <div class="card">
           <img class="back" src="https://picsum.photos/100/100" alt="" />
-          <img class="front card_11" src="./assets/fruitsSprite.png" alt="" />
+          <img class="front" src="./assets/fruitsSprite.png" alt="" />
         </div>
       </div>
       <div data-id="12" class="item">
         <div class="card">
           <img class="back" src="https://picsum.photos/100/100" alt="" />
-          <img class="front card_12" src="./assets/fruitsSprite.png" alt="" />
+          <img class="front" src="./assets/fruitsSprite.png" alt="" />
         </div>
       </div>
       <div data-id="13" class="item">
         <div class="card">
           <img class="back" src="https://picsum.photos/100/100" alt="" />
-          <img class="front card_13" src="./assets/fruitsSprite.png" alt="" />
+          <img class="front" src="./assets/fruitsSprite.png" alt="" />
         </div>
       </div>
       <div data-id="14" class="item">
         <div class="card">
           <img class="back" src="https://picsum.photos/100/100" alt="" />
-          <img class="front card_14" src="./assets/fruitsSprite.png" alt="" />
+          <img class="front" src="./assets/fruitsSprite.png" alt="" />
         </div>
       </div>
       <div data-id="15" class="item">
         <div class="card">
           <img class="back" src="https://picsum.photos/100/100" alt="" />
-          <img class="front card_15" src="./assets/fruitsSprite.png" alt="" />
+          <img class="front" src="./assets/fruitsSprite.png" alt="" />
         </div>
       </div>
       <div data-id="16" class="item">
         <div class="card">
           <img class="back" src="https://picsum.photos/100/100" alt="" />
-          <img class="front card_16" src="./assets/fruitsSprite.png" alt="" />
+          <img class="front" src="./assets/fruitsSprite.png" alt="" />
         </div>
       </div>
       <div data-id="17" class="item">
         <div class="card">
           <img class="back" src="https://picsum.photos/100/100" alt="" />
-          <img class="front card_17" src="./assets/fruitsSprite.png" alt="" />
+          <img class="front" src="./assets/fruitsSprite.png" alt="" />
         </div>
       </div>
       <div data-id="18" class="item">
         <div class="card">
           <img class="back" src="https://picsum.photos/100/100" alt="" />
-          <img class="front card_0" src="./assets/fruitsSprite.png" alt="" />
+          <img class="front" src="./assets/fruitsSprite.png" alt="" />
         </div>
       </div>
       <div data-id="19" class="item">
         <div class="card">
           <img class="back" src="https://picsum.photos/100/100" alt="" />
-          <img class="front card_1" src="./assets/fruitsSprite.png" alt="" />
+          <img class="front" src="./assets/fruitsSprite.png" alt="" />
         </div>
       </div>
       <div data-id="20" class="item">
         <div class="card">
           <img class="back" src="https://picsum.photos/100/100" alt="" />
-          <img class="front card_2" src="./assets/fruitsSprite.png" alt="" />
+          <img class="front" src="./assets/fruitsSprite.png" alt="" />
         </div>
       </div>
       <div data-id="21" class="item">
         <div class="card">
           <img class="back" src="https://picsum.photos/100/100" alt="" />
-          <img class="front card_3" src="./assets/fruitsSprite.png" alt="" />
+          <img class="front" src="./assets/fruitsSprite.png" alt="" />
         </div>
       </div>
       <div data-id="22" class="item">
         <div class="card">
           <img class="back" src="https://picsum.photos/100/100" alt="" />
-          <img class="front card_4" src="./assets/fruitsSprite.png" alt="" />
+          <img class="front" src="./assets/fruitsSprite.png" alt="" />
         </div>
       </div>
       <div data-id="23" class="item">
         <div class="card">
           <img class="back" src="https://picsum.photos/100/100" alt="" />
-          <img class="front card_5" src="./assets/fruitsSprite.png" alt="" />
+          <img class="front" src="./assets/fruitsSprite.png" alt="" />
         </div>
       </div>
       <div data-id="24" class="item">
         <div class="card">
           <img class="back" src="https://picsum.photos/100/100" alt="" />
-          <img class="front card_6" src="./assets/fruitsSprite.png" alt="" />
+          <img class="front" src="./assets/fruitsSprite.png" alt="" />
         </div>
       </div>
       <div data-id="25" class="item">
         <div class="card">
           <img class="back" src="https://picsum.photos/100/100" alt="" />
-          <img class="front card_7" src="./assets/fruitsSprite.png" alt="" />
+          <img class="front" src="./assets/fruitsSprite.png" alt="" />
         </div>
       </div>
       <div data-id="26" class="item">
         <div class="card">
           <img class="back" src="https://picsum.photos/100/100" alt="" />
-          <img class="front card_8" src="./assets/fruitsSprite.png" alt="" />
+          <img class="front" src="./assets/fruitsSprite.png" alt="" />
         </div>
       </div>
       <div data-id="27" class="item">
         <div class="card">
           <img class="back" src="https://picsum.photos/100/100" alt="" />
-          <img class="front card_9" src="./assets/fruitsSprite.png" alt="" />
+          <img class="front" src="./assets/fruitsSprite.png" alt="" />
         </div>
       </div>
       <div data-id="28" class="item">
         <div class="card">
           <img class="back" src="https://picsum.photos/100/100" alt="" />
-          <img class="front card_10" src="./assets/fruitsSprite.png" alt="" />
+          <img class="front" src="./assets/fruitsSprite.png" alt="" />
         </div>
       </div>
       <div data-id="29" class="item">
         <div class="card">
           <img class="back" src="https://picsum.photos/100/100" alt="" />
-          <img class="front card_11" src="./assets/fruitsSprite.png" alt="" />
+          <img class="front" src="./assets/fruitsSprite.png" alt="" />
         </div>
       </div>
       <div data-id="30" class="item">
         <div class="card">
           <img class="back" src="https://picsum.photos/100/100" alt="" />
-          <img class="front card_12" src="./assets/fruitsSprite.png" alt="" />
+          <img class="front" src="./assets/fruitsSprite.png" alt="" />
         </div>
       </div>
       <div data-id="31" class="item">
         <div class="card">
           <img class="back" src="https://picsum.photos/100/100" alt="" />
-          <img class="front card_13" src="./assets/fruitsSprite.png" alt="" />
+          <img class="front" src="./assets/fruitsSprite.png" alt="" />
         </div>
       </div>
       <div data-id="32" class="item">
         <div class="card">
           <img class="back" src="https://picsum.photos/100/100" alt="" />
-          <img class="front card_14" src="./assets/fruitsSprite.png" alt="" />
+          <img class="front" src="./assets/fruitsSprite.png" alt="" />
         </div>
       </div>
       <div data-id="33" class="item">
         <div class="card">
           <img class="back" src="https://picsum.photos/100/100" alt="" />
-          <img class="front card_15" src="./assets/fruitsSprite.png" alt="" />
+          <img class="front" src="./assets/fruitsSprite.png" alt="" />
         </div>
       </div>
       <div data-id="34" class="item">
         <div class="card">
           <img class="back" src="https://picsum.photos/100/100" alt="" />
-          <img class="front card_16" src="./assets/fruitsSprite.png" alt="" />
+          <img class="front" src="./assets/fruitsSprite.png" alt="" />
         </div>
       </div>
       <div data-id="35" class="item">
         <div class="card">
           <img class="back" src="https://picsum.photos/100/100" alt="" />
-          <img class="front card_17" src="./assets/fruitsSprite.png" alt="" />
+          <img class="front" src="./assets/fruitsSprite.png" alt="" />
         </div>
       </div>
     </div>
 
-    <script>
-      fetch('/api/game')
-        .then((res) => res.json())
-        .then((res) => {
-          console.log(res)
-        })
-    </script>
     <script src="./src/main.js"></script>
   </body>
 </html>
