start introduction div

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,19 @@
   </head>
   <body>
     <h1>oclock memory game</h1>
+    <div class="introduction">
+      <div class="leaderBoard">
+        <ul>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+        </ul>
+      </div>
 
+      <button>Launch game</button>
+    </div>
     <div class="board">
       <div data-id="0" class="item">
         <div class="card">
@@ -227,6 +239,9 @@
           <img class="front" src="./assets/fruitsSprite.png" alt="" />
         </div>
       </div>
+    </div>
+    <div class="progressBar">
+      <div class="bar green"></div>
     </div>
 
     <script src="./src/main.js"></script>
