--- a/public/index.html
+++ b/public/index.html
@@ -12,11 +12,9 @@
     <div class="introduction">
       <div class="leaderBoard">
         <ul>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
+          <li><p>#1 : 30 sec</p></li>
+          <li><p>#2 : No record</p></li>
+          <li><p>#3 : No record</p></li>
         </ul>
       </div>
 
