--- a/public/index.html
+++ b/public/index.html
@@ -21,220 +21,243 @@
       <button>Launch game</button>
     </div>
     <div class="board">
-      <div data-id="0" class="item">
-        <div class="card">
-          <img class="back" src="https://picsum.photos/100/100" alt="" />
-          <img class="front" src="./assets/fruitsSprite.png" alt="" />
-        </div>
+      <div class="win">
+        <lottie-player
+          class="win_animation"
+          autoplay
+          src="https://assets3.lottiefiles.com/packages/lf20_9ngjlC.json"
+          background="transparent"
+          speed="1"
+          style="width: 300px; height: 300px"
+          loop
+        ></lottie-player>
       </div>
-      <div data-id="1" class="item">
-        <div class="card">
-          <img class="back" src="https://picsum.photos/100/100" alt="" />
-          <img class="front" src="./assets/fruitsSprite.png" alt="" />
-        </div>
+      <div class="lose">
+        <lottie-player
+          src="https://assets3.lottiefiles.com/packages/lf20_LlRvIg.json"
+          autoplay
+          background="transparent"
+          speed="1"
+          style="width: 300px; height: 300px"
+          loop
+        ></lottie-player>
       </div>
-      <div data-id="2" class="item">
-        <div class="card">
-          <img class="back" src="https://picsum.photos/100/100" alt="" />
-          <img class="front" src="./assets/fruitsSprite.png" alt="" />
+      <div class="game">
+        <div data-id="0" class="item">
+          <div class="card">
+            <img class="back" src="https://picsum.photos/100/100" alt="" />
+            <img class="front" src="./assets/fruitsSprite.png" alt="" />
+          </div>
         </div>
-      </div>
-      <div data-id="3" class="item">
-        <div class="card">
-          <img class="back" src="https://picsum.photos/100/100" alt="" />
-          <img class="front" src="./assets/fruitsSprite.png" alt="" />
+        <div data-id="1" class="item">
+          <div class="card">
+            <img class="back" src="https://picsum.photos/100/100" alt="" />
+            <img class="front" src="./assets/fruitsSprite.png" alt="" />
+          </div>
         </div>
-      </div>
-      <div data-id="4" class="item">
-        <div class="card">
-          <img class="back" src="https://picsum.photos/100/100" alt="" />
-          <img class="front" src="./assets/fruitsSprite.png" alt="" />
+        <div data-id="2" class="item">
+          <div class="card">
+            <img class="back" src="https://picsum.photos/100/100" alt="" />
+            <img class="front" src="./assets/fruitsSprite.png" alt="" />
+          </div>
         </div>
-      </div>
-      <div data-id="5" class="item">
-        <div class="card">
-          <img class="back" src="https://picsum.photos/100/100" alt="" />
-          <img class="front" src="./assets/fruitsSprite.png" alt="" />
+        <div data-id="3" class="item">
+          <div class="card">
+            <img class="back" src="https://picsum.photos/100/100" alt="" />
+            <img class="front" src="./assets/fruitsSprite.png" alt="" />
+          </div>
         </div>
-      </div>
-      <div data-id="6" class="item">
-        <div class="card">
-          <img class="back" src="https://picsum.photos/100/100" alt="" />
-          <img class="front" src="./assets/fruitsSprite.png" alt="" />
+        <div data-id="4" class="item">
+          <div class="card">
+            <img class="back" src="https://picsum.photos/100/100" alt="" />
+            <img class="front" src="./assets/fruitsSprite.png" alt="" />
+          </div>
         </div>
-      </div>
-      <div data-id="7" class="item">
-        <div class="card">
-          <img class="back" src="https://picsum.photos/100/100" alt="" />
-          <img class="front" src="./assets/fruitsSprite.png" alt="" />
+        <div data-id="5" class="item">
+          <div class="card">
+            <img class="back" src="https://picsum.photos/100/100" alt="" />
+            <img class="front" src="./assets/fruitsSprite.png" alt="" />
+          </div>
         </div>
-      </div>
-      <div data-id="8" class="item">
-        <div class="card">
-          <img class="back" src="https://picsum.photos/100/100" alt="" />
-          <img class="front" src="./assets/fruitsSprite.png" alt="" />
+        <div data-id="6" class="item">
+          <div class="card">
+            <img class="back" src="https://picsum.photos/100/100" alt="" />
+            <img class="front" src="./assets/fruitsSprite.png" alt="" />
+          </div>
         </div>
-      </div>
-      <div data-id="9" class="item">
-        <div class="card">
-          <img class="back" src="https://picsum.photos/100/100" alt="" />
-          <img class="front" src="./assets/fruitsSprite.png" alt="" />
+        <div data-id="7" class="item">
+          <div class="card">
+            <img class="back" src="https://picsum.photos/100/100" alt="" />
+            <img class="front" src="./assets/fruitsSprite.png" alt="" />
+          </div>
         </div>
-      </div>
-      <div data-id="10" class="item">
-        <div class="card">
-          <img class="back" src="https://picsum.photos/100/100" alt="" />
-          <img class="front" src="./assets/fruitsSprite.png" alt="" />
+        <div data-id="8" class="item">
+          <div class="card">
+            <img class="back" src="https://picsum.photos/100/100" alt="" />
+            <img class="front" src="./assets/fruitsSprite.png" alt="" />
+          </div>
         </div>
-      </div>
-      <div data-id="11" class="item">
-        <div class="card">
-          <img class="back" src="https://picsum.photos/100/100" alt="" />
-          <img class="front" src="./assets/fruitsSprite.png" alt="" />
+        <div data-id="9" class="item">
+          <div class="card">
+            <img class="back" src="https://picsum.photos/100/100" alt="" />
+            <img class="front" src="./assets/fruitsSprite.png" alt="" />
+          </div>
         </div>
-      </div>
-      <div data-id="12" class="item">
-        <div class="card">
-          <img class="back" src="https://picsum.photos/100/100" alt="" />
-          <img class="front" src="./assets/fruitsSprite.png" alt="" />
+        <div data-id="10" class="item">
+          <div class="card">
+            <img class="back" src="https://picsum.photos/100/100" alt="" />
+            <img class="front" src="./assets/fruitsSprite.png" alt="" />
+          </div>
         </div>
-      </div>
-      <div data-id="13" class="item">
-        <div class="card">
-          <img class="back" src="https://picsum.photos/100/100" alt="" />
-          <img class="front" src="./assets/fruitsSprite.png" alt="" />
+        <div data-id="11" class="item">
+          <div class="card">
+            <img class="back" src="https://picsum.photos/100/100" alt="" />
+            <img class="front" src="./assets/fruitsSprite.png" alt="" />
+          </div>
         </div>
-      </div>
-      <div data-id="14" class="item">
-        <div class="card">
-          <img class="back" src="https://picsum.photos/100/100" alt="" />
-          <img class="front" src="./assets/fruitsSprite.png" alt="" />
+        <div data-id="12" class="item">
+          <div class="card">
+            <img class="back" src="https://picsum.photos/100/100" alt="" />
+            <img class="front" src="./assets/fruitsSprite.png" alt="" />
+          </div>
         </div>
-      </div>
-      <div data-id="15" class="item">
-        <div class="card">
-          <img class="back" src="https://picsum.photos/100/100" alt="" />
-          <img class="front" src="./assets/fruitsSprite.png" alt="" />
+        <div data-id="13" class="item">
+          <div class="card">
+            <img class="back" src="https://picsum.photos/100/100" alt="" />
+            <img class="front" src="./assets/fruitsSprite.png" alt="" />
+          </div>
         </div>
-      </div>
-      <div data-id="16" class="item">
-        <div class="card">
-          <img class="back" src="https://picsum.photos/100/100" alt="" />
-          <img class="front" src="./assets/fruitsSprite.png" alt="" />
+        <div data-id="14" class="item">
+          <div class="card">
+            <img class="back" src="https://picsum.photos/100/100" alt="" />
+            <img class="front" src="./assets/fruitsSprite.png" alt="" />
+          </div>
         </div>
-      </div>
-      <div data-id="17" class="item">
-        <div class="card">
-          <img class="back" src="https://picsum.photos/100/100" alt="" />
-          <img class="front" src="./assets/fruitsSprite.png" alt="" />
+        <div data-id="15" class="item">
+          <div class="card">
+            <img class="back" src="https://picsum.photos/100/100" alt="" />
+            <img class="front" src="./assets/fruitsSprite.png" alt="" />
+          </div>
         </div>
-      </div>
-      <div data-id="18" class="item">
-        <div class="card">
-          <img class="back" src="https://picsum.photos/100/100" alt="" />
-          <img class="front" src="./assets/fruitsSprite.png" alt="" />
+        <div data-id="16" class="item">
+          <div class="card">
+            <img class="back" src="https://picsum.photos/100/100" alt="" />
+            <img class="front" src="./assets/fruitsSprite.png" alt="" />
+          </div>
         </div>
-      </div>
-      <div data-id="19" class="item">
-        <div class="card">
-          <img class="back" src="https://picsum.photos/100/100" alt="" />
-          <img class="front" src="./assets/fruitsSprite.png" alt="" />
+        <div data-id="17" class="item">
+          <div class="card">
+            <img class="back" src="https://picsum.photos/100/100" alt="" />
+            <img class="front" src="./assets/fruitsSprite.png" alt="" />
+          </div>
         </div>
-      </div>
-      <div data-id="20" class="item">
-        <div class="card">
-          <img class="back" src="https://picsum.photos/100/100" alt="" />
-          <img class="front" src="./assets/fruitsSprite.png" alt="" />
+        <div data-id="18" class="item">
+          <div class="card">
+            <img class="back" src="https://picsum.photos/100/100" alt="" />
+            <img class="front" src="./assets/fruitsSprite.png" alt="" />
+          </div>
         </div>
-      </div>
-      <div data-id="21" class="item">
-        <div class="card">
-          <img class="back" src="https://picsum.photos/100/100" alt="" />
-          <img class="front" src="./assets/fruitsSprite.png" alt="" />
+        <div data-id="19" class="item">
+          <div class="card">
+            <img class="back" src="https://picsum.photos/100/100" alt="" />
+            <img class="front" src="./assets/fruitsSprite.png" alt="" />
+          </div>
         </div>
-      </div>
-      <div data-id="22" class="item">
-        <div class="card">
-          <img class="back" src="https://picsum.photos/100/100" alt="" />
-          <img class="front" src="./assets/fruitsSprite.png" alt="" />
+        <div data-id="20" class="item">
+          <div class="card">
+            <img class="back" src="https://picsum.photos/100/100" alt="" />
+            <img class="front" src="./assets/fruitsSprite.png" alt="" />
+          </div>
         </div>
-      </div>
-      <div data-id="23" class="item">
-        <div class="card">
-          <img class="back" src="https://picsum.photos/100/100" alt="" />
-          <img class="front" src="./assets/fruitsSprite.png" alt="" />
+        <div data-id="21" class="item">
+          <div class="card">
+            <img class="back" src="https://picsum.photos/100/100" alt="" />
+            <img class="front" src="./assets/fruitsSprite.png" alt="" />
+          </div>
         </div>
-      </div>
-      <div data-id="24" class="item">
-        <div class="card">
-          <img class="back" src="https://picsum.photos/100/100" alt="" />
-          <img class="front" src="./assets/fruitsSprite.png" alt="" />
+        <div data-id="22" class="item">
+          <div class="card">
+            <img class="back" src="https://picsum.photos/100/100" alt="" />
+            <img class="front" src="./assets/fruitsSprite.png" alt="" />
+          </div>
         </div>
-      </div>
-      <div data-id="25" class="item">
-        <div class="card">
-          <img class="back" src="https://picsum.photos/100/100" alt="" />
-          <img class="front" src="./assets/fruitsSprite.png" alt="" />
+        <div data-id="23" class="item">
+          <div class="card">
+            <img class="back" src="https://picsum.photos/100/100" alt="" />
+            <img class="front" src="./assets/fruitsSprite.png" alt="" />
+          </div>
         </div>
-      </div>
-      <div data-id="26" class="item">
-        <div class="card">
-          <img class="back" src="https://picsum.photos/100/100" alt="" />
-          <img class="front" src="./assets/fruitsSprite.png" alt="" />
+        <div data-id="24" class="item">
+          <div class="card">
+            <img class="back" src="https://picsum.photos/100/100" alt="" />
+            <img class="front" src="./assets/fruitsSprite.png" alt="" />
+          </div>
         </div>
-      </div>
-      <div data-id="27" class="item">
-        <div class="card">
-          <img class="back" src="https://picsum.photos/100/100" alt="" />
-          <img class="front" src="./assets/fruitsSprite.png" alt="" />
+        <div data-id="25" class="item">
+          <div class="card">
+            <img class="back" src="https://picsum.photos/100/100" alt="" />
+            <img class="front" src="./assets/fruitsSprite.png" alt="" />
+          </div>
         </div>
-      </div>
-      <div data-id="28" class="item">
-        <div class="card">
-          <img class="back" src="https://picsum.photos/100/100" alt="" />
-          <img class="front" src="./assets/fruitsSprite.png" alt="" />
+        <div data-id="26" class="item">
+          <div class="card">
+            <img class="back" src="https://picsum.photos/100/100" alt="" />
+            <img class="front" src="./assets/fruitsSprite.png" alt="" />
+          </div>
         </div>
-      </div>
-      <div data-id="29" class="item">
-        <div class="card">
-          <img class="back" src="https://picsum.photos/100/100" alt="" />
-          <img class="front" src="./assets/fruitsSprite.png" alt="" />
+        <div data-id="27" class="item">
+          <div class="card">
+            <img class="back" src="https://picsum.photos/100/100" alt="" />
+            <img class="front" src="./assets/fruitsSprite.png" alt="" />
+          </div>
         </div>
-      </div>
-      <div data-id="30" class="item">
-        <div class="card">
-          <img class="back" src="https://picsum.photos/100/100" alt="" />
-          <img class="front" src="./assets/fruitsSprite.png" alt="" />
+        <div data-id="28" class="item">
+          <div class="card">
+            <img class="back" src="https://picsum.photos/100/100" alt="" />
+            <img class="front" src="./assets/fruitsSprite.png" alt="" />
+          </div>
         </div>
-      </div>
-      <div data-id="31" class="item">
-        <div class="card">
-          <img class="back" src="https://picsum.photos/100/100" alt="" />
-          <img class="front" src="./assets/fruitsSprite.png" alt="" />
+        <div data-id="29" class="item">
+          <div class="card">
+            <img class="back" src="https://picsum.photos/100/100" alt="" />
+            <img class="front" src="./assets/fruitsSprite.png" alt="" />
+          </div>
         </div>
-      </div>
-      <div data-id="32" class="item">
-        <div class="card">
-          <img class="back" src="https://picsum.photos/100/100" alt="" />
-          <img class="front" src="./assets/fruitsSprite.png" alt="" />
+        <div data-id="30" class="item">
+          <div class="card">
+            <img class="back" src="https://picsum.photos/100/100" alt="" />
+            <img class="front" src="./assets/fruitsSprite.png" alt="" />
+          </div>
         </div>
-      </div>
-      <div data-id="33" class="item">
-        <div class="card">
-          <img class="back" src="https://picsum.photos/100/100" alt="" />
-          <img class="front" src="./assets/fruitsSprite.png" alt="" />
+        <div data-id="31" class="item">
+          <div class="card">
+            <img class="back" src="https://picsum.photos/100/100" alt="" />
+            <img class="front" src="./assets/fruitsSprite.png" alt="" />
+          </div>
         </div>
-      </div>
-      <div data-id="34" class="item">
-        <div class="card">
-          <img class="back" src="https://picsum.photos/100/100" alt="" />
-          <img class="front" src="./assets/fruitsSprite.png" alt="" />
+        <div data-id="32" class="item">
+          <div class="card">
+            <img class="back" src="https://picsum.photos/100/100" alt="" />
+            <img class="front" src="./assets/fruitsSprite.png" alt="" />
+          </div>
         </div>
-      </div>
-      <div data-id="35" class="item">
-        <div class="card">
-          <img class="back" src="https://picsum.photos/100/100" alt="" />
-          <img class="front" src="./assets/fruitsSprite.png" alt="" />
+        <div data-id="33" class="item">
+          <div class="card">
+            <img class="back" src="https://picsum.photos/100/100" alt="" />
+            <img class="front" src="./assets/fruitsSprite.png" alt="" />
+          </div>
+        </div>
+        <div data-id="34" class="item">
+          <div class="card">
+            <img class="back" src="https://picsum.photos/100/100" alt="" />
+            <img class="front" src="./assets/fruitsSprite.png" alt="" />
+          </div>
+        </div>
+        <div data-id="35" class="item">
+          <div class="card">
+            <img class="back" src="https://picsum.photos/100/100" alt="" />
+            <img class="front" src="./assets/fruitsSprite.png" alt="" />
+          </div>
         </div>
       </div>
     </div>
@@ -243,5 +266,6 @@
     </div>
 
     <script src="./src/main.js"></script>
+    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
   </body>
 </html>
