add a pair counter on the game part

--- a/public/index.html
+++ b/public/index.html
@@ -261,6 +261,9 @@
         </div>
       </div>
     </div>
+    <div class="counterPair">
+      <p>0 / 18 paires trouvée</p>
+    </div>
     <div class="progressBar">
       <div class="bar green"></div>
     </div>
